enhance user management with validation messages, internationalization support, and improved error handling